--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,5 @@
 title: Neha Save
 logo: \nehasaveportfolio\Neha_Save Headshot.JPEG
-description: Hello! I'm Neha Makarand Save, a data analyst based in Boston, MA. I am currently pursuing a Master's in Analytics at Northeastern University, where I maintain a GPA of 3.95. My academic foundation in Computer Science and Engineering, paired with practical experience, allows me to derive meaningful insights from complex data sets.
-
-Professionally, I have enhanced business processes through automation and developed predictive models as a Data Analyst Intern at Edofox and Yoshops. My technical skills include SQL, Python, R, and Tableau, which I utilize to improve decision-making and operational efficiency. I am passionate about transforming data into actionable intelligence to drive business success.
+description: Hello! I'm Neha Makarand Save, a data analyst based in Boston, MA. I am currently pursuing a Master's in Analytics at Northeastern University, where I maintain a GPA of 3.95. My academic foundation in Computer Science and Engineering, paired with practical experience, allows me to derive meaningful insights from complex data sets.Professionally, I have enhanced business processes through automation and developed predictive models as a Data Analyst Intern at Edofox and Yoshops. My technical skills include SQL, Python, R, and Tableau, which I utilize to improve decision-making and operational efficiency. I am passionate about transforming data into actionable intelligence to drive business success.
 #show_downloads: true
 theme: jekyll-theme-minimal
